--- a/jenkins-service.yml
+++ b/jenkins-service.yml
@@ -6,11 +6,11 @@ metadata:
     name: jenkins-service
     app: jenkins-deployment
 spec:
-  type: loadBalancer
+  type: LoadBalancer
   ports:
     port: 8080
     targetPorts: 8080
   selector:
-    name: jenkins
+    name: jenkins-pod
     app: jenkins-deployment
     
