--- a/jenkins-deployment.yml
+++ b/jenkins-deployment.yml
@@ -1,5 +1,5 @@
-apiVersion: v1
-kind: deployment
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: jenkins
   labels:
@@ -21,5 +21,5 @@ spec:
       containers:
         - name: jenkins
           image: jenkins
-          ports:
+          port:
            - containerPort: 8080
